# Multi_agent_research_system

./: .env  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  UV_SETUP.md  cleanup.sh  env.example  index.html  main.py  pyproject.toml  research_sessions.db  run-cli.sh  run-web.sh  setup.sh  start_web_ui.py  test.sh  vercel.json  vite.config.js
api/: index.py  requirements.txt  test.py
backend/: __init__.py  company_detection.py  config.py  enhanced_research_system.py  exceptions.py  main.py  pricing.py  quality_evaluator.py  start_web_ui.py  test_company_search.py  utils.py  web_ui.py
backend/agents/: __init__.py  base_agent.py  quality_evaluator.py  report_synthesizer.py  research_planner.py  summarizer.py  web_search_retriever.py
backend/core/: error_handler.py  quality_assessor.py  response_parser.py  timeout_manager.py
backend/tests/: README.md  current_system_test.py  simple_test.py
courses/: COURSE_Multi_Agent_Research_Systems.md  course_guidelines_analysis.md
courses/examples/: Dockerfile  README.md  docker-compose.yml  module10_real_world_applications.py  module11_enterprise_security.py  module12_data_privacy_compliance.py  module13_devops_cicd.py  module1_basic_llm_agent.py  module2_cost_optimization.py  module3_multi_agent_pipeline.py  module4_real_time_progress.py  module5_advanced_pipeline.py  module6_metrics_monitoring.py  module7_production_deployment.py  module8_advanced_features.py  module9_testing_quality.py  nginx.conf  prometheus.yml  requirements.txt
docs/: AGENT_TRACKING_FIX.md  RESEARCH_PIPELINE_IMPROVEMENTS.md  UI_CLEANUP_SUMMARY.md  VALIDATION_ERROR_FIX.md  demo_enhanced_sources_ui.md  development-notes.md  filtering_improvements.md  optimization_summary.md
examples/: README.md
examples/reports/: research_report_3_f9tDRG72C1tTE7twcr1w.html  research_report_5-s32lTNcNugNUSSl4EHNQ.html  research_report_ETHpvQbObfC0a1ejWbNZfQ.html  research_report_Q5m6R5--cSeaGLI9wN0Qfw.html  research_report_QTHgvTCnTTJg5e5V1SdtmA.html  research_report_Z82GgoPvFfn4kxbXCDm0cA.html  research_report_aEUDnpSvN8aVUL-rQRsE_g.html  research_report_b8FChKLO9w7bsMCM5-XAEA.html  research_report_ea2LYCUg_UXIjVxepe2Azg.html  research_report_oqHFXpNVYqzcu4_vx1Vp0g.html
exports/reports/: .gitkeep  index.json
frontend/: package-lock.json  package.json
frontend/src/: main.jsx
frontend/src/components/: ErrorBoundary.jsx  ModelConfigModal.jsx  ResearchPlanAnalysis.jsx
frontend/src/context/: ResearchContext.jsx
frontend/src/hooks/: useResearch.js  useWebSocket.js
frontend/src/utils/: api.js
scripts/: README.md  show_improvements.py
src/: App.jsx
src/components/: ApiConfigModal.jsx  ArchitectureSidebar.jsx  PipelineFlow.jsx
src/constants/: constants.js
src/hooks/: useModelConfig.js
src/utils/: api.js
